# pollis

./: .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .sops.yaml  ARCHITECTURE.md  AUDIT-slice3.md  AUTH_AND_DB_MIGRATION.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEAD-CODE-REPORT.md  FIXES.md  LICENSE.md  MIGRATION_SUMMARY.md  MLSProgress.md  MULTI_DEVICE_ENROLLMENT.md  Makefile  NEXT_STEPS.md  README.md  SECURITY.md  SPEC.md  TODO.md  app.go  config.go  deny.toml  go.mod  go.sum  main.go  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  secrets.enc.env  secrets.prod.enc.env  turbo.json  (+1 more)
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/classify/: gap_behind
fuzz/corpus/next_watermark/: all_other  gap_unhandled  tie_boundary  two_handled
fuzz/corpus/prune_floor/: floor_zero  tier1_reported  tier2_cap  unreported
fuzz/fuzz_targets/: classify.rs  may_rejoin.rs  next_watermark.rs  prune_floor.rs  resolve.rs
pollis-capture-linux/: Cargo.toml
pollis-capture-linux/src/: camera.rs  linux.rs  main.rs  x11.rs
pollis-capture-macos/: Cargo.toml
pollis-capture-macos/src/: camera.rs  macos.rs  main.rs
pollis-capture-proto/: Cargo.toml
pollis-capture-proto/src/: lib.rs
pollis-core/: Cargo.toml  build.rs
pollis-core/src/: accounts.rs  android_tls.rs  bridge.rs  config.rs  error.rs  keystore.rs  lib.rs  media_server.rs  realtime.rs  sink.rs  state.rs
pollis-core/src/commands/: account_identity.rs  auth.rs  blocks.rs  device_enrollment.rs  dm.rs  groups.rs  livekit.rs  livekit_jwt.rs  livekit_signalling.rs  livekit_stub.rs  messages.rs  mls.rs  mod.rs  overlay.rs  pin.rs  push.rs  r2.rs  safety.rs  screenshare.rs  sfx.rs  terminal.rs  terminal_unix.rs  terminal_windows.rs  transparency.rs  turso_token.rs  update.rs  user.rs  voice.rs  voice_apm.rs  voice_e2ee.rs  voice_e2ee_stub.rs  voice_test.rs
pollis-core/src/commands/camera/: capture.rs  mod.rs  start_windows.rs  state.rs  unsupported.rs
pollis-core/src/commands/groups/: channels.rs  groups.rs  invites.rs  join_requests.rs  mod.rs  (+3 more)
pollis-core/src/db/: local.rs  local_schema.sql  mod.rs  remote.rs  replica_pool.rs
pollis-core/src/net/: directory.rs  mod.rs  overlay.rs
pollis-core/src/signal/: mls_storage.rs  mod.rs
pollis-core/tests/: overlay_live_relay.rs
pollis-delivery/: Cargo.toml  Dockerfile  package.json  wrangler.dev.jsonc  wrangler.prod.jsonc
pollis-delivery/src/: account.rs  auth.rs  bootstrap.rs  broker.rs  cert.rs  commit.rs  db.rs  devices.rs  directory.rs  email_change.rs  error.rs  groups.rs  headers.rs  lib.rs  main.rs  messages.rs  otp.rs  profile.rs  ratelimit.rs  redact.rs  session.rs  writes.rs
pollis-delivery/tests/: auth.rs  bootstrap.rs  broker.rs  email_change.rs  key_packages.rs  reset_session.rs  retention.rs  serialize.rs  welcomes.rs
pollis-delivery/worker/: index.ts
pollis-device-cert/: Cargo.toml
pollis-device-cert/src/: lib.rs
pollis-node/: Cargo.toml  package.json
pollis-node/src/: events.rs  lib.rs  state.rs
pollis-node/src/dispatch/: auth.rs  blocks.rs  device_enrollment.rs  dm.rs  groups.rs  install_kind.rs  livekit.rs  messages.rs  mls.rs  mod.rs  pin.rs  r2.rs  safety.rs  screenshare.rs  sfx.rs  terminal.rs  transparency.rs  update.rs  user.rs  voice.rs  voice_test.rs
pollis-relay/: Cargo.toml  Dockerfile
pollis-relay/src/: circuit.rs  client.rs  config.rs  health.rs  http.rs  lib.rs  policy.rs  proto.rs  ratelimit.rs  server.rs  shim.rs  stream.rs  tls.rs
pollis-relay/tests/: proof.rs
pollis-tui/: Cargo.toml
pollis-tui/src/: app.rs  auth.rs  data.rs  enroll.rs  enroll_flow.rs  home.rs  lib.rs  main.rs  send.rs  sync.rs  terminal.rs  ui.rs
pollis-tui/tests/: enroll_smoke.rs  recover_smoke.rs  restart_smoke.rs  send_smoke.rs  sync_smoke.rs  ui_e2e.rs
pollis-tui/tests/common/: driver.rs  mod.rs
src-tauri/: Cargo.toml  Entitlements.mas.plist  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.mas.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/capabilities/updater/: updater.json
src-tauri/examples/: apply_migrations.rs  migrate.rs
src-tauri/icons/: AppIcon.icns  Assets.car  icon.icns  regen-assets-car.sh
src-tauri/icons/logo-lock-2.icon/: icon.json
src-tauri/src/: accounts.rs  config.rs  error.rs  keystore.rs  lib.rs  main.rs  realtime.rs  sink.rs  state.rs  test_harness.rs  tray.rs
src-tauri/src/commands/: account_identity.rs  auth.rs  blocks.rs  camera.rs  device_enrollment.rs  dm.rs  groups.rs  install_kind.rs  livekit.rs  media_permissions.rs  messages.rs  mls.rs  mod.rs  overlay.rs  pin.rs  r2.rs  safety.rs  screenshare.rs  sfx.rs  signal.rs  terminal.rs  transparency.rs  update.rs  user.rs  voice.rs  voice_apm.rs  voice_denoiser.rs  voice_test.rs
src-tauri/src/db/: local.rs  local_schema.sql  remote.rs
src-tauri/src/signal/: crypto.rs  group.rs  identity.rs  mls_storage.rs  mod.rs  ratchet.rs  session.rs  x3dh.rs
src-tauri/tests/: flows.rs  multi_device_messaging.rs
src-tauri/tests/flows/: adversarial.rs  auth.rs  dms.rs  groups.rs  harness.rs  heavy_churn.rs  messages.rs  model.rs  rejoin.rs  sealed_sender.rs  security.rs  voice.rs
verifiable-log/: Cargo.toml  README.md
verifiable-log-builder/: Cargo.toml  README.md
verifiable-log-builder/src/: account_key.rs  binaries.rs  builder.rs  commit_log.rs  error.rs  keys.rs  lib.rs  source.rs
verifiable-log-builder/tests/: account_build.rs  binaries_build.rs  build.rs
verifiable-log-serve/: Cargo.toml  Dockerfile  README.md  cli.workflow.yml  docker-entrypoint.sh
verifiable-log-serve/src/: account.rs  bundle.rs  error.rs  group.rs  layout.rs  lib.rs  live.rs  release.rs  remote.rs  server.rs
verifiable-log-serve/tests/: account_e2e.rs  binaries_e2e.rs  e2e.rs  group.rs  live.rs
verifiable-log/fixtures/: example.json
verifiable-log/src/: error.rs  hash.rs  lib.rs  log.rs  merkle.rs  proof.rs  sth.rs
verifiable-log/tests/: integration.rs  rfc6962_vectors.rs
(+899 files in other folders)
