[workspace]
resolver = "2"
members = [
    "src-tauri",
    "pollis-core",
    "pollis-capture-proto",
    "pollis-capture-linux",
    "pollis-capture-macos",
    "verifiable-log",
    "verifiable-log-builder",
    "verifiable-log-serve",
    "pollis-delivery",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
rust-version = "1.77"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
