[package]
name = "pollis-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "pollis_core"
# cdylib for Android (.so loaded by JNI), staticlib for iOS xcframework,
# rlib so the desktop src-tauri crate can depend on us as a normal Rust lib.
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
# When enabled, emits a `uniffi-bindgen` bin target so we can run the
# binding generator without installing a separate crate.
cli = ["uniffi/cli"]
# Exposes test helpers (Config::for_test, InMemoryKeystore) for the
# integration harness in src-tauri/tests/flows.rs.
test-harness = []

[dependencies]
uniffi = { version = "0.31", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread", "time", "macros", "io-util", "net", "process", "signal"] }
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
libsql = { version = "0.6", features = ["remote"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "reusable_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
curve25519-dalek = "4"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "windows-native", "crypto-rust"] }
base64 = "0.22"
hex = "0.4"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
dotenvy = "0.15"
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }
# RNNoise (Rust port) — runs as a pre-APM NS stage when the user enables
# Click Suppression. Handles transients (keyboard clicks, mouse clicks)
# that APM's spectral NS misses. Default features pull in clap/dasp/hound
# for the bundled CLI; we only need the library. Pure Rust — cross-compiles
# fine; only the gated voice modules use it, so it's harmless on mobile.
nnnoiseless = { version = "0.5", default-features = false }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
blurhash = "0.2"
futures-util = "0.3"
# Local-loopback HTTP server for serving cached media to the webview.
# One URL pattern (`http://127.0.0.1:<port>/<token>/<hash>`) drives every
# `<img>/<audio>/<video>` element — replaces the bifurcated asset:// (images)
# / IPC-bytes-to-Blob-URL (audio/video) pair. Keeps decryption in Rust and
# gives `<video>` real Range support without pumping bytes through JSON IPC.
axum = "0.7"
openmls = "0.8"
openmls_traits = "0.5"
openmls_rust_crypto = "0.5"
openmls_basic_credential = "0.5"
gethostname = "1.1.0"

# Vendor the WebRTC AudioProcessing module so AGC/NS/AEC are owned by us
# end-to-end and tunable from Rust. The system pkg-config build branch wants
# webrtc-audio-processing-2 >= 2.1 which most distros don't ship yet.
#
# Windows is excluded: webrtc-audio-processing-sys 2.0.4 vendors a meson +
# abseil-cpp build that has zero MSVC support upstream. iOS/Android are
# excluded for the same reason — the bundled C++ build hardcodes
# -mmacos-version-min and has no NDK path; mobile does not do voice.
[target.'cfg(not(any(target_os = "windows", target_os = "ios", target_os = "android")))'.dependencies]
webrtc-audio-processing = { version = "2", features = ["bundled"] }

# macOS screen capture (ScreenCaptureKit) no longer lives in this
# process — issue #283 Phase 2 moved it into the `pollis-capture-macos`
# helper subprocess for the same uncatchable-ObjC-throw reason Linux
# capture is already a subprocess. `screencapturekit` is therefore now a
# dependency of that helper crate, not of pollis-core.

# Windows.Graphics.Capture wrapper for Windows screen share. High-level
# crate over the official `windows` bindings — gives us the system capture
# picker (equivalent to macOS SCContentSharingPicker / Linux portal), a
# free-threaded capture session, and BGRA frame buffers, without the raw
# D3D11 staging-texture/Map boilerplate. WGC needs Win10 1803+.
[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "2"

# Desktop-only crates, excluded from the mobile (iOS/Android) build:
# - portable-pty: in-app terminal pane; pulls termios 0.2.2 (no ios arm).
# - livekit/libwebrtc: Rust LiveKit realtime/media engine. Mobile uses the
#   native LiveKit SDK (@livekit/react-native) instead — see issue #185.
# - cpal/rodio: host audio I/O for voice + sound effects; no mobile path
#   and mobile drops voice.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
portable-pty = "0.8"
livekit = { version = "0.7", features = ["rustls-tls-webpki-roots"] }
libwebrtc = "0.3"
cpal = "0.15"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
# Shared capture-helper wire protocol. Both the Linux and macOS capture
# helpers are subprocesses speaking this; this is the parent-side
# decoder. The crate is platform-free so it lives on the desktop gate.
pollis-capture-proto = { path = "../pollis-capture-proto" }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]
